<?xml version="1.0"?>
<package format="2">
  <name>cupoch_conversions</name>
  <version>0.0.2</version>
  <description>Provides conversion functions to and from cupoch datatypes</description>

  <maintainer email="lzs_1993@qq.com">Zhensheng Li</maintainer>

  <license>Apache-2.0</license>

  <author email="lzs_1993@qq.com">Zhensheng Li</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
